test in a windows
Summary: test in windows

Test Plan: lee

Reviewers: lee

Reviewed By: lee

Differential Revision: http://phabricator.trs.org.cn/D9

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,5 +1,5 @@
 {
-    "project.name":"trst first",
-    "phabricator.uri":"http://192.168.200.68/",
+    "project.name":"first first",
+    "phabricator.uri":"http://phabricator.trs.org.cn",
     "repository.callsign":"T"
 }
