--- a/.arcconfig
+++ b/.arcconfig
@@ -1,5 +1,5 @@
 {
-    "project.name":"first first",
+    "project.name":"68test",
     "phabricator.uri":"http://phabricator.trs.org.cn",
-    "repository.callsign":"T"
+    "repository.callsign":"ONE"
 }
