--- a/.arcconfig
+++ b/.arcconfig
@@ -1,5 +1,5 @@
 {
-    "project.name":"68test",
-    "phabricator.uri":"http://phabricator.trs.org.cn",
+    "project_id":"68test",
+    "conduit_uri":"http://phabricator.trs.org.cn",
     "repository.callsign":"ONE"
 }
